legends fix: address skeleton jumping

--- a/src/legends/components/AccountDropdown/AccountDropdown.module.scss
+++ b/src/legends/components/AccountDropdown/AccountDropdown.module.scss
@@ -50,6 +50,10 @@
         line-height: 1.4;
         font-weight: 500;
       }
+      .addressSkeleton {
+        height: 19.6px;
+        width: 5.25rem;
+      }
       .levelAndRank {
         font-size: 0.75rem;
         font-family: $secondaryFont;
